# scene-classification

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
notebooks/: scene_classification_colab.ipynb
reports/: summary.md
scripts/: cnn_summary.py
src/scene_classification/: __init__.py  cli.py  config.py  evaluate.py
src/scene_classification/data/: download.py
src/scene_classification/features/: extract.py
src/scene_classification/models/: train_cnn.py  train_tabular.py
src/scene_classification/serve/: api.py
tests/: test_api_health.py  test_cli_imports.py  test_config.py  test_split.py
